--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 
 </title>
     </head>
-    <body>
-Bienvenidos a mi tienda
+    <body bgcolor="#3E6F9B">
+<center><b>Bienvenidos a mi tienda</b></center>
+<center><img src="images/logo.jpg" width="450"></center><br><br>
+<center><b>Login</b></center><br><br>
+<center>Usuario:</center><br>
+<center><input type="text"</center><br><br>
+<center>Contraseña:</center><br>
+<center><input type="password"</center><br><br>
+<center><input type="submit"value="Iniciar"</center>
     </body>
 </html>
