imagenes en tabla

--- a/tabla1.html
+++ b/tabla1.html
@@ -6,21 +6,31 @@
     </title>
 </head>
 
-<body>
+<body bgcolor="#B15B26">
     <table align="center" border="1">
         <tr>
-            <td>
-                    <center><B>PORTAFOLIO</B></center>
-            </td>
+            <td><center><B>PORTAFOLIO</B></center></td>
         </tr>
         <tr>
-            <td><img src="images.game.png" width="50"> </td>
-            <td>Imagen2</td>
-            <td>Imagen3</td>
+            <td><img src="images/game.png" width="80"> </td>
+            <td><img src="images/winner.png" width="80"></td>
+            <td><img src="images/game.png" width="80"></td>
         </tr>
-        <tr><td>Imagen1</td><td>Imagen2</td><td>Imagen3</td></tr>
-        <tr><td>Imagen1</td><td>Imagen2</td><td>Imagen3</td></tr>
-        <tr><td>Imagen1</td><td>Imagen2</td><td>Imagen3</td></tr>
+        <tr>
+            <td><img src="images/futbol.png" width="80"></td>
+            <td><img src="images/trophy.png" width="80"></td>
+            <td><img src="images/bicy.png" width="80"></td>
+        </tr>    
+        <tr>
+            <td><img src="images/target.png" width="80"></td>
+            <td><img src="images/gym.png" width="80"></td>
+            <td>><img src="images/ball.png" width="80"></td>
+        </tr>
+        <tr>
+            <td><img src="images/bicycle.png" width="80"></td>
+            <td><img src="images/running.png" width="80"></td>
+            <td><img src="images/swim.png" width="80"></td>
+        </tr>
     </table>
 </body>
 
