--- a/reset_pass.html
+++ b/reset_pass.html
@@ -6,6 +6,6 @@
         <center><b>Recuperar contraseña</b></center><br><br>
         <center><input type="text"</center><br><br>
         <center><input type="submit"value="Recuperar"</center><br><br>
-        <center><a href="index.html"> <img src="icons/facebook.png" width="50"></a></center>
+        <center><a href="index.html"> <img src="icons/reply.png" width="50"></a></center>
     </body>
 </html>
