--- a/tabla1.html
+++ b/tabla1.html
@@ -5,11 +5,10 @@
 
     </title>
 </head>
-
 <body bgcolor="#B15B26">
     <table align="center" border="1">
         <tr>
-            <td><center><B>PORTAFOLIO</B></center></td>
+            <td colspan="3"><center><B>PORTAFOLIO</B></center></td>
         </tr>
         <tr>
             <td><img src="images/game.png" width="80"> </td>
