--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
     <head>
 <title>Mitienda
-
 </title>
+<link rel="icon" type="image/ico" href="icons/logo.png"/>
     </head>
     <body bgcolor="#3E6F9B">
 <center><b><h1>Bienvenidos a mi tienda</h1></b></center>
 <center><img src="images/logo.jpg" width="450"></center><br><br>
 <font size="10" color="black" face="cooperblack"><center><b>Login</b></center><br></font>
 <center>Usuario:</center><br>
-<center><input type="text"</center><br><br>
+<center><input type="text" placeholder="user@email.com" minlength="3" maxlength="5" pattern="[0-9]" title="solo numeros" required></center><br><br>
 <center>Contraseña:</center><br>
 <center><input type="password"</center><br><br>
 <center><input type="submit"value="Iniciar"</center><br><br>
