--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 <link rel="icon" type="image/ico" href="icons/logo.png"/>
     </head>
     <body bgcolor="#3E6F9B">
+        <form name="form1" action="#" method="GET">
 <center><b><h1>Bienvenidos a mi tienda</h1></b></center>
 <center><img src="images/logo.jpg" width="450"></center><br><br>
 <font size="10" color="black" face="cooperblack"><center><b>Login</b></center><br></font>
 <center>Usuario:</center><br>
-<center><input type="text" placeholder="user@email.com" minlength="3" maxlength="5" pattern="[0-9]" title="solo numeros" required></center><br><br>
+<center><input type="text" name="user" placeholder="user@email.com" minlength="3" maxlength="5"  title="solo numeros" required></center><br><br>
 <center>Contraseña:</center><br>
-<center><input type="password"</center><br><br>
-<center><input type="submit"value="Iniciar"</center><br><br>
+<center><input type="password" name="passwd"</center><br><br>
+<center><input type="submit"value="Iniciar sesion"</center><br><br>
 <a href="reset_pass.html">Olvide mi contraseña</a><br><br>
 <center><a href="https://es-la.facebook.com/" target="_BLANK"><img src="icons/facebook.png" width="50">&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="https://twitter.com/?lang=es" target="_BLANK">  <img src="icons/twitter.png" width="50"></center></a><br><br>
-
+</form>
     </body>
 </html>
