--- a/reset_pass.html
+++ b/reset_pass.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-
+        <title>reset</title>
     </head>
     <body bgcolor="#3E6F9B">
         <center><b>Recuperar contraseña</b></center><br><br>
