--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <html>
     <head>
+        <style>
+            input:valid{
+                background: green
+            }
+            input:invalid{
+                background: red
+            }
 <title>Mitienda
 </title>
 <link rel="icon" type="image/ico" href="icons/logo.png"/>
+</style>
     </head>
     <body bgcolor="#3E6F9B">
-        <form name="form1" action="#" method="GET">
+        <form name="form1" action="validar.php" method="POST">
 <center><b><h1>Bienvenidos a mi tienda</h1></b></center>
 <center><img src="images/logo.jpg" width="450"></center><br><br>
 <font size="10" color="black" face="cooperblack"><center><b>Login</b></center><br></font>
