--- a/signup.html
+++ b/signup.html
@@ -4,26 +4,26 @@
         <link rel="icon" type="image/ico" href="icons/icon.png"/>
     </head>
     <body bgcolor="#A5A96E">
-            <form name="form" action="#" method="GET">
+            <form name="form" action="#" method="POST">
             <table align="center" border="1">
                 <tr><td colspan="2"><center><font size="7" color="black" face="Tw Cen MT"><center><b>Formulario de Registro</b></center><center><img src="images/reg.png" width="80"></center></td></tr></font>
         <tr>
-            <td>Nombres: <font color="red"> *</font></td><td><input type="text" name="nom" required></td>
+            <td>Nombres: <font color="red"> *</font></td><td><input type="text" name="nom" pattern="[A-Za-z]{3,15}" title="Solo se aceptan letras" required></td>
         </tr>
         <tr>
-            <td>Apellidos:<font color="red"> *</font></td><td><input type="text" name="apell" required></td>
+            <td>Apellidos:<font color="red"> *</font></td><td><input type="text" name="apell" pattern="[A-Za-z]{3,15}" title="Solo se aceptan letras" required></td>
         </tr>
         <tr>
-            <td>Nro Identificacion: <font color="red"> *</font></td><td><input type="text" name="id" required></td>
+            <td>Nro Identificacion: <font color="red"> *</font></td><td><input type="text" name="id" pattern="[0-9]{7,12}" title="Solo se aceptan numeros"required></td>
         </tr>
         <tr>
             <td>Genero: <font color="red"> *</font></td><td><input type="radio" name="genero" value="masculino" required>Masculino <input type="radio" name="genero" value="femenino" required>Femenino</td>
         </tr>
         <tr>
-            <td>Telefono: </td><td><input type="text" name="tel" required></td>
+            <td>Telefono: </td><td><input type="text" name="tel" pattern="[0-9]{7,12}" title="Solo se aceptan numeros" required></td>
         </tr>
         <tr>
-            <td>Celular: <font color="red"> *</font></td><td><input type="text" name="cel" required></td>
+            <td>Celular: <font color="red"> *</font></td><td><input type="text" name="cel" pattern="[0-9]{7,12}" title="Solo se aceptan numeros" required></td>
         </tr>
         <tr>
             <td>Departamento Nac: <font color="red"> *</font></td><td><input type="text" name="depto" list="deptos" required></td>
@@ -35,10 +35,10 @@
             <td>Correo electronico: <font color="red"> *</font></td><td><input type="email" name="correo" placeholder="user@email.com" required></td>
         </tr>
         <tr>
-            <td>Contraseña: <font color="red"> *</font></td><td><input type="text" name="contr" required></td>
+            <td>Contraseña: <font color="red"> *</font></td><td><input type="password" name="contr" required></td>
         </tr>
         <tr>
-            <td>Confirmar contraseña: <font color="red"> *</font></td><td><input type="text" name="conf" required></td>
+            <td>Confirmar contraseña: <font color="red"> *</font></td><td><input type="password" name="conf" required></td>
         </tr>
         <tr>
             <td>Foto:</td><td><input type="file" name="archivo" required></td>
