--- a/tabla1.html
+++ b/tabla1.html
@@ -11,7 +11,7 @@
             <td colspan="3"><center><B>PORTAFOLIO</B></center></td>
         </tr>
         <tr>
-            <td><img src="images/game.png" width="80"> </td>
+            <td><img src="images/trop.png" width="80"> </td>
             <td><img src="images/winner.png" width="80"></td>
             <td><img src="images/game.png" width="80"></td>
         </tr>
