--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
     <head>
         <style>
             input:valid{
-                background: green
+                background: rgb(103, 150, 103)
             }
             input:invalid{
-                background: red
+                background: rgb(158, 113, 113)
             }
-<title>Mitienda
-</title>
-<link rel="icon" type="image/ico" href="icons/logo.png"/>
-</style>
+            <title>Mitienda</title>
+            <link rel="icon" type="image/ico" href="icons/logo.png"/>
+        </style>
     </head>
     <body bgcolor="#3E6F9B">
         <form name="form1" action="validar.php" method="POST">
 <center><b><h1>Bienvenidos a mi tienda</h1></b></center>
 <center><img src="images/logo.jpg" width="450"></center><br><br>
-<font size="10" color="black" face="cooperblack"><center><b>Login</b></center><br></font>
+<font size="10" color="black" face="cooperblack"><center><b>Login</b></center></font>
+<center><img src="icons/login.png" width="80"><br><br></center>
 <center>Usuario:</center><br>
 <center><input type="text" name="user" placeholder="user@email.com" minlength="3" maxlength="5"  title="solo numeros" required></center><br><br>
 <center>Contraseña:</center><br>
@@ -24,7 +24,7 @@
 <center><input type="submit"value="Iniciar sesion"</center><br><br>
 <a href="reset_pass.html">Olvide mi contraseña</a><br><br>
 <center><a href="https://es-la.facebook.com/" target="_BLANK"><img src="icons/facebook.png" width="50">&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="https://twitter.com/?lang=es" target="_BLANK">  <img src="icons/twitter.png" width="50"></center></a><br><br>
-</form>
+        <a href="https://twitter.com/?lang=es" target="_BLANK">  <img src="icons/twitter.png" width="50"></center></a><br><br>
+        </form>
     </body>
 </html>
