--- a/scripts_ejemplos/calculadora.html
+++ b/scripts_ejemplos/calculadora.html
@@ -10,7 +10,7 @@
             <tr><td bgcolor="#6D94A7"><center><b>Segundo numero:</b></center><center><input type="number" name="n2" ></center><br>
             <tr><td bgcolor="#6D94A7"><center><b>Tipo operacion</b></center>
         <center>
-        <select name="tipo_op"></center><br><br>
+        <select name="tipo_op"></center>
         <option value="1">Sumar</option>
         <option value="2">Restar</option>  
         <option value="3">Multiplicar</option>
