--- a/tabla1.html
+++ b/tabla1.html
@@ -2,8 +2,9 @@
 
 <head>
     <title>
-
+        Tabla
     </title>
+    <link rel="icon" type="image/ico" href="icons/icon.png"/>
 </head>
 <body bgcolor="#B15B26">
     <table align="center" border="1">
