--- a/tabla2.html
+++ b/tabla2.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>
-
+            Usuarios
         </title>
-        <link rel="icon" type="image/ico" href="icons/logo.png"/>
+        <link rel="icon" type="image/ico" href="icons/icon.png"/>
     </head>
     <body  bgcolor="#89DD6E">
         <table align="center" border="1">
